; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdump.c_prec.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdump.c_prec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @prec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prec(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %22 [
    i32 192, label %5
    i32 163, label %5
    i32 147, label %5
    i32 135, label %5
    i32 140, label %5
    i32 130, label %5
    i32 148, label %5
    i32 132, label %5
    i32 167, label %5
    i32 133, label %5
    i32 190, label %5
    i32 146, label %5
    i32 166, label %6
    i32 161, label %6
    i32 154, label %6
    i32 173, label %6
    i32 149, label %6
    i32 143, label %7
    i32 144, label %7
    i32 170, label %8
    i32 128, label %8
    i32 131, label %8
    i32 141, label %8
    i32 142, label %8
    i32 145, label %8
    i32 150, label %8
    i32 176, label %8
    i32 157, label %8
    i32 153, label %9
    i32 169, label %9
    i32 152, label %9
    i32 134, label %10
    i32 191, label %10
    i32 129, label %11
    i32 138, label %11
    i32 139, label %11
    i32 162, label %12
    i32 160, label %12
    i32 165, label %12
    i32 159, label %12
    i32 164, label %12
    i32 155, label %12
    i32 136, label %13
    i32 137, label %13
    i32 151, label %13
    i32 168, label %13
    i32 177, label %14
    i32 174, label %15
    i32 175, label %16
    i32 158, label %17
    i32 156, label %18
    i32 171, label %19
    i32 189, label %20
    i32 182, label %20
    i32 184, label %20
    i32 183, label %20
    i32 188, label %20
    i32 179, label %20
    i32 181, label %20
    i32 180, label %20
    i32 178, label %20
    i32 187, label %20
    i32 185, label %20
    i32 186, label %20
    i32 172, label %21
  ]

5:                                                ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1
  store i32 170, i32* %2, align 4
  br label %23

6:                                                ; preds = %1, %1, %1, %1, %1
  store i32 160, i32* %2, align 4
  br label %23

7:                                                ; preds = %1, %1
  store i32 150, i32* %2, align 4
  br label %23

8:                                                ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1
  store i32 140, i32* %2, align 4
  br label %23

9:                                                ; preds = %1, %1, %1
  store i32 130, i32* %2, align 4
  br label %23

10:                                               ; preds = %1, %1
  store i32 120, i32* %2, align 4
  br label %23

11:                                               ; preds = %1, %1, %1
  store i32 110, i32* %2, align 4
  br label %23

12:                                               ; preds = %1, %1, %1, %1, %1, %1
  store i32 100, i32* %2, align 4
  br label %23

13:                                               ; preds = %1, %1, %1, %1
  store i32 90, i32* %2, align 4
  br label %23

14:                                               ; preds = %1
  store i32 80, i32* %2, align 4
  br label %23

15:                                               ; preds = %1
  store i32 70, i32* %2, align 4
  br label %23

16:                                               ; preds = %1
  store i32 60, i32* %2, align 4
  br label %23

17:                                               ; preds = %1
  store i32 50, i32* %2, align 4
  br label %23

18:                                               ; preds = %1
  store i32 40, i32* %2, align 4
  br label %23

19:                                               ; preds = %1
  store i32 30, i32* %2, align 4
  br label %23

20:                                               ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1
  store i32 20, i32* %2, align 4
  br label %23

21:                                               ; preds = %1
  store i32 10, i32* %2, align 4
  br label %23

22:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
